...
                            <constraint firstItem="nW7-DZ-KYz" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="L34-Xy-bMC"/>
                            <constraint firstItem="nW7-DZ-KYz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Pvv-be-Ecv"/>
                            <constraint firstItem="nW7-DZ-KYz" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qWo-fz-Igl"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Meals" id="clT-xH-6MN"/>
                    <connections>
                        <outlet property="tableView" destination="nW7-DZ-KYz" id="Ea6-wF-UAE"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
...
